# grafiti

./: .gitignore  LICENSE  README.md  Snakefile  config.yaml  environment.yml  launch_job.sh  pyproject.toml  requirements.txt  setup.py
grafiti/: __init__.py
grafiti/datasets/: __init__.py  _datasets.py
grafiti/model/: _model.py
grafiti/plotting/: _plotting.py
grafiti/tools/: __init__.py  _tools.py
notebooks/: boden  boden.ipynb  melanoma.ipynb  melanoma4fov.ipynb  spectrum  spectrum.ipynb  synthetic_grafiti_analysis.ipynb  synthetic_method_comparison.ipynb
rules/: spectrum.smk
sappy/datasets/: _datasets.py
sappy/model/: __init__.py  _model.py
sappy/plotting/: _plotting.py
sappy/tools/: _tools.py
scripts/spectrum/: cluster_embedding.py  plot_motifs.py  run_grafiti.py
