[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grafiti-spatial"
version = "0.0.02"
authors = [
  { name="Nicholas Ceglia", email="nickceglia@gmail.com" },
  { name="Maryam Pourmaleki", email="mapourmaleki11@gmail.com"},
]
description = "Spatial Autoencoder Python Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/nceglia/grafiti"
